--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,13 @@ on:
 jobs:
   build-deploy:
     runs-on: ubuntu-latest
+
     permissions:
       pages: write
       id-token: write
+
+    environment:
+      name: github-pages
 
     steps:
       - uses: actions/checkout@v4
